<?xml version="1.0"?>
<package format="2">
  <name>visibility_graph</name>
  <version>0.0.0</version>
  <description>visibility_graph</description>
  <maintainer email="matthewoots@gmail.com">Matthew Woo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>common_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>common_msgs</exec_depend>

  <!-- Helps to enable those precompiled cmake modules -->
  <build_depend>cmake_modules</build_depend>

  <export>
  </export>
</package>